Fixed alignment issues

--- a/Angular2/src/app/pages/training/profile/training-profile.component.scss
+++ b/Angular2/src/app/pages/training/profile/training-profile.component.scss
@@ -1,56 +1,63 @@
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .course-list {
+  display: flex;
+  flex-direction: column;
+
+  .course-list-item {
+    background-color: #fff;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.05);
+    margin-bottom: 1.25rem;
+    padding: 1.8rem 4.3rem;
+    font-size: 1rem;
 
-    .course-list-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 10px;
-        box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.05);
-        margin-bottom: 1.5rem;
-        padding: 1.8rem 4.3rem;
-        font-size: 1rem;
-
-        h1 {
-            font-size: 1rem;
-            font-weight: 600;
-        }
-
-        .label {
-            text-align: center;
-            border-radius: 50px;
-        }
-
-        .label-l1 {
-            background-color: #4cc9f0;
-        }
-
-        .label-l2 {
-            background-color: #F72585;
-        }
-
-        .label-l3 {
-            background-color: #7C5FF4;
-        }
+    h1 {
+      font-size: 1rem;
+      min-width: 340px;
     }
+
+    .label {
+      text-align: center;
+      border-radius: 50px;
+      padding: 0.5rem 2rem;
+    }
+
+    .label-l1 {
+      background-color: #4cc9f0;
+      color: #fff;
+    }
+
+    .label-l2 {
+      background-color: #f72585;
+      color: #fff;
+    }
+
+    .label-l3 {
+      background-color: #7c5ff4;
+      color: #fff;
+    }
+
+    .btn {
+      font-size: 16px;
+      min-width: 200px;
+    }
+  }
 }
 
-.border-l1 {
-    border-left: 3.5px solid #4cc9f0;
+.border-clr-1 {
+  border-left: 5px solid #4cc9f0;
 }
 
-.border-l2 {
-    border-left: 3.5px solid #F72585;
+.border-clr-2 {
+  border-left: 5px solid #f72585;
 }
 
-.border-l3 {
-    border-left: 3.5px solid #7C5FF4;
+.border-clr-3 {
+  border-left: 5px solid #7c5ff4;
 }
-
-
-
